viz: Assign temporary refernces with --enable-viz.

Fix the logic that decides whether or not to assign temporary references
in HostFrameSinkManager. This fixes temporary references not being
assigned owners when running with --enable-viz in desktop Chrome. Add a
test to verify temporary references are assigned with a remote
FrameSinkmanager.

Also fix some places in HostFrameSinkManager where |frame_sink_manager_|
and |frame_sink_manager_impl_| were mixed up.

Bug: 787589
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: I2b40fa332f8afc8ff7fa7b62482ef174bcbd239a
Reviewed-on: https://chromium-review.googlesource.com/793976
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519861}
Former-commit-id: cc5c369bf8072b35bad5b148d74f01b5afa4ba29